Fixed spacing between sections

--- a/css/main.css
+++ b/css/main.css
@@ -51,19 +51,6 @@ a {
 /***********
 Components
 **********/
-.component img {
-    display: block;
-    margin: 5px;
-}
-.component__img {
-    overflow-x: auto;
-}
-.component__code {
-    background-color: var(--dark-grey);
-    color: var(--off-white);
-    padding: 10px 0;
-    margin: 5px 0;
-}
 
 .footer__copy {
     color: var(--light-grey);
@@ -222,6 +209,12 @@ i.fa-brands {
 /********************
 Molecules & Organisms
 *********************/
+.contracts, .portfolio {
+    padding: 80px 0;
+}
+section.infoblock {
+    padding: 80px 0 160px;
+}
 
 /*Availability Floater*/
 .availability-floater{
@@ -274,6 +267,7 @@ a.availability-floater {
 /*Navbar*/
 .top-bar {
     background: var(--dark-grey);
+    padding: 1.5rem 0;
 }
 .navbar {
     display: flex;
@@ -398,5 +392,6 @@ a.availability-floater {
 
 /*Footer*/
 footer {
-    background: var(--black);
+    background-image: linear-gradient(var(--black), var(--dark-grey));
+    padding: 200px 0 40px;
 }
